[gd_scene load_steps=12 format=2]

[ext_resource path="res://FillingStation/StationArea/FillDoneArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://FillingStation/StationArea/FillingArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://FillingStation/StationArea/ChunkBowl.tscn" type="PackedScene" id=3]
[ext_resource path="res://FillingStation/Jar/FillJarHolder.tscn" type="PackedScene" id=4]
[ext_resource path="res://JarSanitizationStation/wood_counter.png" type="Texture" id=5]
[ext_resource path="res://FillingStation/FillingStation.gd" type="Script" id=6]
[ext_resource path="res://Common/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://FillingStation/glass_lid_on.wav" type="AudioStream" id=8]
[ext_resource path="res://FillingStation/chunk_on_board.wav" type="AudioStream" id=9]
[ext_resource path="res://FillingStation/glass_jar.wav" type="AudioStream" id=10]
[ext_resource path="res://Common/ping.wav" type="AudioStream" id=11]

[node name="FillingStation" type="Node2D"]
script = ExtResource( 6 )

[node name="WoodCounter" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 5 )

[node name="FillingArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 490, 525 )

[node name="ChunkBowl" parent="." instance=ExtResource( 3 )]
position = Vector2( 460, 162 )

[node name="JarHolder" parent="." instance=ExtResource( 4 )]
position = Vector2( 757, 166 )

[node name="DoneArea" parent="." instance=ExtResource( 1 )]
position = Vector2( 1114, 563 )

[node name="ChunksSpawner" type="Node2D" parent="."]

[node name="JarSpawner" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="ChunkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="JarSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="LidSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="Ping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 5.0
